--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
   email: false
 
 script:
-  - julia --color=yes --check-bounds=yes -e 'using Pkg; Pkg.add("Test"); Pkg.add("LinearAlgebra"); Pkg.add("ApproxFun"); Pkg.add("FastTransforms"); Pkg.add("SpecialFunctions"); Pkg.add("DualNumbers"); Pkg.update(); Pkg.test("HypergeometricFunctions", coverage=true)'
+  - julia --color=yes --check-bounds=yes -e 'using Pkg; Pkg.clone("https://github.com/JuliaApproximation/HypergeometricFunctions.jl"); Pkg.add("Test"); Pkg.add("LinearAlgebra"); Pkg.add("ApproxFun"); Pkg.add("FastTransforms"); Pkg.add("SpecialFunctions"); Pkg.add("DualNumbers"); Pkg.update(); Pkg.test("HypergeometricFunctions", coverage=true)'
 
 after_success:
   - julia -e 'using Pkg; cd(Pkg.dir("HypergeometricFunctions")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
