--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ sudo: true
 os:
   - linux
   - osx
+  - windows
 julia:
   - 1.0
   - 1.1
+  - 1.2
+  - 1.3    
   - nightly
 matrix:
   allow_failures: false
