--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
-sudo: true
 os:
   - linux
   - osx
@@ -9,22 +8,11 @@ julia:
   - 1.0
   - 1.1
   - 1.2
-  - 1.3    
+  - 1.3
   - nightly
 matrix:
-  allow_failures: false
-
-branches:
-  only:
-  - master
-  - dev
-
+  allow_failures:
+    - julia: nightly
 notifications:
   email: false
-
-script:
-  - julia --color=yes --check-bounds=yes -e 'using Pkg; Pkg.clone("https://github.com/JuliaApproximation/HypergeometricFunctions.jl"); Pkg.add("Test"); Pkg.add("LinearAlgebra"); Pkg.add("ApproxFun"); Pkg.add("FastTransforms"); Pkg.add("SpecialFunctions"); Pkg.add("DualNumbers"); Pkg.update(); Pkg.test("HypergeometricFunctions", coverage=true)'
-
-after_success:
-  - julia -e 'using Pkg; cd(Pkg.dir("HypergeometricFunctions")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
-
+codecov: true
