--- a/Project.toml
+++ b/Project.toml
@@ -6,9 +6,16 @@ version = "0.1.1"
 DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+
+[extras]
+IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "IntervalArithmetic"]
 
 [compat]
 DualNumbers = "0.5,0.6"
+IntervalArithmetic = "0.16"
 SpecialFunctions = "0.7,0.8"
 julia = "1"
