--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "HypergeometricFunctions"
 uuid = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
-version = "0.2"
+version = "0.2.1"
 
 [deps]
 DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
@@ -8,9 +8,9 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
-DualNumbers = "0.5,0.6"
-IntervalArithmetic = "0.15,0.16"
-SpecialFunctions = "0.7,0.8"
+DualNumbers = "0.5, 0.6"
+IntervalArithmetic = "0.15, 0.16"
+SpecialFunctions = "0.7, 0.8, 0.9"
 julia = "1"
 
 [extras]
