--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
+  - freebsd
   - linux
   - osx
   - windows
