--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "HypergeometricFunctions"
 uuid = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
-version = "0.3.4"
+version = "0.3.5"
 
 [deps]
 DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
@@ -9,6 +9,6 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-DualNumbers = "0.5, 0.6, 0.7"
+DualNumbers = "0.6.3, 0.7"
 SpecialFunctions = "0.7, 0.8, 0.9, 0.10, 1.0"
 julia = "1"
