--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,8 +14,8 @@ jobs:
       matrix:
         version:
           - '1.0'
-          - '1.5'
-#          - 'nightly'
+          - '1.6'
+         - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
