--- a/Project.toml
+++ b/Project.toml
@@ -3,13 +3,18 @@ uuid = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 version = "0.3.11"
 
 [deps]
-OpenLibm_jll = "05823500-19ac-5b8b-9628-191a04bc5112"
 DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OpenLibm_jll = "05823500-19ac-5b8b-9628-191a04bc5112"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-DualNumbers = "0.6.3, 0.7"
+DualNumbers = "0.6.3"
 SpecialFunctions = "0.7, 0.8, 0.9, 0.10, 1.0, 2"
 julia = "1.3"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
