--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ version = "0.3.14"
 
 [deps]
 DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
+Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OpenLibm_jll = "05823500-19ac-5b8b-9628-191a04bc5112"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
